--- a/app/views/courses/course_lists.html.erb
+++ b/app/views/courses/course_lists.html.erb
@@ -14,7 +14,7 @@
 
 <th class="col-md-2">課名</th>
 <th class="col-md-1">老師</th>
-<th class="col-md-3">簡介</th>
+<th class="col-md-3">備註</th>
 <th class="col-md-1">時間</th>
 <th class="col-md-1">學分</th>
 <!--<th class="col-md-1"></th>-->
