--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,15 +4,15 @@
 		 
 		</p>
 		<p class="navbar-text pull-right footer-text" >
-			<a href="#">關於我們</a>
-			<a href="#" data-toggle="modal" data-target="#infoModal">聯絡我們</a>
+			<a href="#">About</a>
+			<a href="#" data-toggle="modal" data-target="#infoModal" style="margin-left:10px;">Contact Us</a>
 		</p>
 		<!--<a href="http://youtu.be/zJahlKPCL9g" class="navbar-btn btn-danger btn pull-right">
 		<span class="glyphicon glyphicon-star"></span>  Subscribe on YouTube</a>-->
 	</div>
 </div>
 
-<div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-labelledby="purchaseLabel" aria-hidden="true">
+<div class="modal fade" id="infoModal" tabindex="-1" role="dialog" aria-hidden="true">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="modal-header">
