--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,5 +55,27 @@
 <%= render 'layouts/footer' %>
 
 </body>
-
+<script>
+	$(document).ready(function() {
+		$('.masterTooltip').hover(function(){
+						// Hover over code
+						var title = $(this).attr('title');
+						$(this).data('tipText', title).removeAttr('title');
+						$('<p class="toolTipText "></p>')
+						.text(title)
+						.appendTo('body')
+						.fadeIn('slow');
+		}, function() {
+						// Hover out code
+						$(this).attr('title', $(this).data('tipText'));
+						$('.toolTipText').remove();
+		}).mousemove(function(e) {
+						var mousex = e.pageX + 20; //Get X coordinates
+						var mousey = e.pageY + 10; //Get Y coordinates
+						$('.toolTipText')
+						.css({ top: mousey, left: mousex })
+		});
+		
+	});
+</script>
 </html>
