--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -44,9 +44,9 @@
 	<div class="col-md-11" style="position:absolute;margin-top:30%;height:200px; background-color: rgba(255,255,255, 0); z-index:1000; ">
 		<div class="row">
 		
-			<div class="container icon-container" style="margin-left:30%;" onclick="zzz();">
+			<div class="container icon-container" style="margin-left:25%;" >
 				<div class="row row-margin" >
-				<div class="circle " style="//margin-left:30%;">
+				<div class="circle clickable-hover" href="/courses/">
 					<%=fa_icon "search 5x" %>
 				</div>
 				</div>
@@ -56,7 +56,7 @@
 			</div>
 			<div class="container icon-container" >
 				<div class="row row-margin">
-				<div class="circle">	
+				<div class="circle clickable-hover" href="#">	
 					<%=fa_icon "file-text-o 5x" %>
 					
 				</div>
@@ -66,18 +66,18 @@
 			</div>
 			<div class="container icon-container" >
 				<div class="row row-margin">
-				<div class="circle">
+				<div class="circle clickable-hover" href="#">
 					<%=fa_icon "graduation-cap 5x" %>
 					
 					<!--<span class="glyphicon glyphicon-list-alt"style="font-size:70px;"></span>-->
 				</div>
-					<p class="text-center function-desc" >畢業!</p>
+					<p class="text-center function-desc" >算學分</p>
 				</div>
 			</div>
 			
 			<div class="container icon-container">
 				<div class="row row-margin">
-				<div class="circle">	
+				<div class="circle clickable-hover" href="#">	
 					<%=fa_icon "user 5x" %>
 				</div>
 					<p class="text-center function-desc" >找同學</p>
@@ -117,6 +117,10 @@
 			$(".circle").hover(
 				function(){$(this).find("i").css("color","white");},
 				function(){$(this).find("i").css("color","");}
-				);
+			);
+
+			$(".circle").click(function() {
+				window.document.location = $(this).attr("href");
+			});			
 	});
 </script>
