--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,4 +1,4 @@
-123<table class="table ">
+<table class="table ">
 <tr class="row "><th class="col-md-5 "><%= @review.title %></th></tr>
 <tr class="row "><th class="col-md-5 "><%= @review.author %></th></tr>
 <tr class="row "><td class="col-md-5 "><p><%=simple_format h @review.content %></p></td></tr>
