--- a/app/views/courses/course_lists_mini.html.erb
+++ b/app/views/courses/course_lists_mini.html.erb
@@ -29,11 +29,12 @@
 					<tr class="row"><th class="<%=cos_type_class(cd.cos_type)%>"><%=cd.cos_type%></th></tr>
 					
 				<% end %>
-				<tr id="cd_<%=cd.id%>" class="row clickable-row " href="<%=course_path(course)%>">
+				<tr id="cd_<%=cd.id%>" class="row clickable-row clickable-hover" href="<%=course_path(course, :tid=>cd.course_teachership.teacher.id)%>">
 					<td class="">
 						
 						<p id="rating_all" class="">
-							<%= link_to course.ch_name, course_path(course), :class=>"course_name" %>
+							<% link_to course.ch_name, course_path(course), :class=>"course_name" %>
+							<%= course.ch_name %>
 							<%= course.department.ch_name %>
 							<%= cd.course_teachership.teacher.name %>
 							<% if @table_type=="search" %>
@@ -87,6 +88,11 @@
 
 <script>
 
+$(document).ready(function($) {
+	$(".clickable-row").click(function() {
+				window.document.location = $(this).attr("href");
+	});
+});
 
 	<% if @table_type!="cart" %>
 	function add_class(id,addordel){
@@ -148,13 +154,13 @@
 			data: {
 				cd_id: cd_id,
 				type: addordel,
-				sem_id: <%=@sem_id%>
+				sem_id: <%=@sem.id%>
 			},
 			success: function(data) {
 				//if(type=="add")
 				$("#has_seleted_courses").html('<%=loading_img%>');
-				$("#has_seleted_courses").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=list");
-				$("#user_schedule").load("/courses/get_user_courses?sem_id=<%=@sem_id%>&type=schd");
+				$("#has_seleted_courses").load("/courses/get_user_courses?sem_id=<%=@sem.id%>&type=list");
+				$("#user_schedule").load("/courses/get_user_courses?sem_id=<%=@sem.id%>&type=schd");
 				//alert("SUCCESS");
 			}
 			
