--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -7,6 +7,46 @@ $(document).ready(function($) {
 	<% end %>
 });
 </script>
+<div class="bs-callout bs-callout-warning well">
+	<h4>為了提供大家更完整的服務，本頁僅保留BS2選課版的心得，
+	並不再開放新增文章功能，請至課程頁面依格式留下資訊，待資料完整後，能提供給各位的將不只是心得!
+	</h4>
+</div>
+<div class="row">
+	<div class="input-group col-md-4">
+		<div class="input-group-btn">
+			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="search_action">標題 <span class="caret"></span></button>
+			<ul class="dropdown-menu">
+				<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="review_title">標題</a></li>
+				<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="review_content">內容</a></li>
+			</ul>
+		</div><!-- /btn-group -->
+		<input type="hidden" id="search_type" value="course_name">
+		<input type="text" class="form-control" id="search_term" placeholder="Search..." >
+		
+		<span class="input-group-btn"><!--type="submit"-->
+			<button class="btn btn-default" onclick="search_keyword()"><span class="glyphicon glyphicon-search"></span></button>
+		</span>
 
-<div id="search_result">
+	</div><!-- /input-group -->
+	
+</div>
+
+<br>
+
+<div id="search_result" class="row bg-white-transparent">
+</div>
+
+<div class="modal fade" style="z-index:5000;"id="reviewModal" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				
+			</div>
+			<div class="modal-body">
+			</div>
+			<!--<div class="modal-footer">
+			</div>-->
+		</div>
+	</div>
 </div>
