--- a/app/views/courses/raider_submit.js.erb
+++ b/app/views/courses/raider_submit.js.erb
@@ -1,1 +1,4 @@
-alert('!');
+$('#raider_content').html('refresh');
+$('#link_edit_raider').html('編輯');
+$('#raider_form').hide() ;
+$('#raider_content').show() ;
