--- a/app/views/courses/raider_form.html.erb
+++ b/app/views/courses/raider_form.html.erb
@@ -1,4 +1,4 @@
-<%=form_tag "/courses/raider_submit", :remote=>true do%>
+<%=form_tag "/courses/course_raider", :remote=>true do%>
 	<div class="row">
 	考試月份：   		
 			<div class="btn-group">
@@ -25,7 +25,7 @@
 		其他內容：</br>
 		<%= text_area :content, 'default value', :class=>"form-control" %>
 	</div>
-	<%=hidden_field_tag "ctship",params[:ct_id] %> 
+	<%=hidden_field_tag "ct_id",params[:ct_id] %> 
 	<hr>
 	<%=submit_tag "確定修改", :class=>"btn btn-default", :confirm=>"確認資料無誤嗎 ? "%>
 <%end%>
