--- a/app/views/courses/raider_submit.js.erb
+++ b/app/views/courses/raider_submit.js.erb
@@ -1,4 +1,7 @@
-$('#raider_content').html('refresh');
+$('#raider_content').load('/courses/course_raider?ct_id=<%=j @ct.to_s %>&type=1') ;
 $('#link_edit_raider').html('編輯');
 $('#raider_form').hide() ;
 $('#raider_content').show() ;
+
+// flush
+$('#toggle-msg').addClass('text-color-green').html('更新成功').show().fadeOut(4000);
