--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -72,7 +72,7 @@
 		</h2>	
 	</div>
 	<div class="panel-body">
-		<div class="well">
+		<div class="well ">
 			統計圖
 		</div>
    </div>  
@@ -81,8 +81,12 @@
     <div class="panel-heading">
 		<h2 class="panel-title">
 			<p>
-				<i class="fa fa-gamepad"></i>			
-				課程攻略： <%=link_to "編輯", "javascript:void(0);", :onclick=>"loadForm("+courseTeacher.id.to_s+",$(this));",  "data-toggle"=>"tooltip", "data-placement"=>"right", :title=>"為課程新增或修改內容", :id=>"link_edit_raider"%>	
+				<i class="fa fa-gamepad"></i>				
+				課程攻略：
+				<%if current_user%>
+				 <%=link_to "編輯", "javascript:void(0);", :onclick=>"loadForm("+courseTeacher.id.to_s+",$(this));",  "data-toggle"=>"tooltip", "data-placement"=>"right", :title=>"為課程新增或修改內容", :id=>"link_edit_raider"%>	
+				<% end %>
+				<span id="toggle-msg" style="display:none;"></span>
 			</p>
 		</h2>	
 	</div>
@@ -101,30 +105,43 @@
 			<p>
 				<i class="fa fa-weixin"></i>			
 				討論： 
-				<% if current_user %>
-					<%=link_to "留言","javascript:void(0);",:onclick=>"commentShow($(this));"%>
-				<% end %>
+		<% if current_user %>
+					<%=link_to "留言","javascript:void(0);",:onclick=>"commentShow($(this));",:id=>"comment_post_link"%>
+					
+				<div id="commentNew" style="display:none;">	
+			<%=form_tag "/courses/comment_submit", :remote=>true, :class=>"form-horizontal",:role=>"form" do%>
+					<%=hidden_field_tag "ctship", courseTeacher.id %>
+					<div class="form-group">
+						<div class="col-sm-1">
+							<select id="type" name="type" class="form-control">
+								<option value="1">推</option>
+								<option value="2">-></option>
+								<option value="3">噓</option>
+							</select>
+						</div>				
+						<div class="col-sm-3">
+							<label class="control-label" for="comment"><%=current_user.name%>：</label>
+						</div>	
+						<div class="col-sm-7">
+							<div class="input-group">
+								<input class="form-control" id="comment" name="comment" type="text" value="推薦這篇文章">
+      							<span class="input-group-btn">
+      								<%=submit_tag "POST", :class=>"btn btn-default", :id=>"submit_but"%> 
+      							</span>
+   							</div>
+						</div>
+					</div>	
+			<%end%>
+				</div>	
+				
+		<% end %> <!-- current_user -->
 			</p>	
 		</h2>	
 	</div>
-	<div class="panel-body">
-		<div class="row">	
-		<%if current_user%>
-			<div class="well col-sm-7" id="commentNew" style="display:none;">
-				<%=form_tag "/courses/comment_submit", :remote=>true, :class=>"form-horizontal",:role=>"form" do%>
-					<div class="form-group">
-						<label class="control-label" for="comment"><%=current_user.name%>：</label>
-						<%=select_tag "type",options_for_select([["推",1],["->",2],["噓",3]])%>  
-						<%=text_field_tag "comment","推薦這篇文章", :class=>"form-control"%>
-						<%=submit_tag "POST", :class=>"form-control", :id=>"submit_but"%>  
-						<%=hidden_field_tag "ctship",courseTeacher.id %> 
-					</div>
-				<% end %>	
-			</div>	
-		<% end %>	
-			<div class="row well col-sm-8" id="commentList">
+	
+	<div class="panel-body">				
+		<div class="well backgorund-color-grey " id="commentList">
 				<%=render :partial=>"comment_list", :locals => {:ct_id=>courseTeacher.id} %>
-			</div>
 		</div>
 	</div>
 	
@@ -134,10 +151,11 @@
 
 	$('#raider_content').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=1') ;
 	$('#raider_form').hide();
+	
 	function loadForm(id, link){
 		if(link.html()=="編輯"){
 			link.html("取消");
-			$('#raider_form').load('/courses/course_raider?ct_id='+id+'&type=2');
+			$('#raider_form').load("/courses/course_raider?ct_id="+id+"&type=2");
 			$('#raider_form').show() ;
 			$('#raider_content').hide() ;
 		}else{
@@ -201,16 +219,32 @@
 			$('#imagePM').switchClass('fa-search-minus','fa-search-plus');				
 			
 	}
-	
-	function changeColor(but,color,count_div){
+<%if current_user%>	
+	function changeColor(but,color,type){		
 		if(but.hasClass('active')){
-			$('#'+count_div).html((parseInt($('#hw_num').html())-1).toString()) ;
 			but.removeClass('active').switchClass('btn-'+color, 'btn-default') ;
 			but.attr('id','') ;
-		}else{
-			$('#'+count_div).html((parseInt($('#hw_num').html())+1).toString()) ;
+		}else{			
 			but.addClass('active').switchClass('btn-default', 'btn-'+color) ;
 			but.attr('id','1') ;
 		}
 	}
+	
+	function count_month(){
+		var res= 0 ;
+		$('#test-btn-group > button').each(function( index ) {			
+  			if($(this).attr('id')=='1'){
+  				res = res | Math.pow(2,index) ;
+  			}	
+		});
+		$('#test').attr('value',res);
+		res = 0 ;
+		$('#hw-btn-group > button').each(function( index ) {			
+  			if($(this).attr('id')=='1'){
+  				res = res | Math.pow(2,index) ;
+  			}	
+		});
+		$('#hw').attr('value',res);
+	}
+<% end %>	
 </script>
