--- a/app/views/courses/comment_submit.js.erb
+++ b/app/views/courses/comment_submit.js.erb
@@ -2,3 +2,4 @@ $("#commentList").html('<%=j render :partial=>"comment_list", :locals => {:ct_id
 $("#comment").val('') ;	
 $('#type').val('1') ;
 $("#commentNew").hide();
+$('#comment_post_link').html('留言');
