--- a/app/views/courses/raider_submit.js.erb
+++ b/app/views/courses/raider_submit.js.erb
@@ -1,4 +1,4 @@
-$('#raider_content').load('/courses/course_raider?ct_id=<%=j @ct.to_s %>&type=1') ;
+$('#raider_content').load('/courses/course_raider?ct_id=<%=j @ct_id.to_s %>&type=1') ;
 $('#link_edit_raider').html('編輯');
 $('#raider_form').hide() ;
 $('#raider_content').show() ;
