--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -72,8 +72,8 @@
 		</h2>	
 	</div>
 	<div class="panel-body">
-		<div class="well ">
-			統計圖
+		<div class="well" id="chart_div" style="width: 600px; height: 300px;">
+			
 		</div>
    </div>  
 
@@ -247,4 +247,23 @@
 		$('#hw').attr('value',res);
 	}
 <% end %>	
+	google.load("visualization", "1", {packages:["corechart"]});
+	google.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['學年度', '開課名額', '選課人數'],
+          ['99',  120,      100],
+          ['100',  120,     97],
+          ['101',  120,     100],
+          ['102',  60,      75]
+        ]);
+
+        var options = {
+          title: '歷年選課狀況',
+          hAxis: {title: '學年度', titleTextStyle: {color: 'green'}}
+        };
+
+        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
 </script>
