--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,4 +1,5 @@
 <%= javascript_include_tag "courses", "data-turbolinks-track" => true %>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 
 <h1 class="row">
 	<div class="col-md-9"><%= @course.ch_name %>(<%= @course.eng_name %>) <button class="btn btn-primary btn-lg" onclick="add_to_cart(<%=params[:id]%>,'add')">加入觀察名單</button></div>  	
