--- a/app/views/courses/_show_teacherOnCourse.html.erb
+++ b/app/views/courses/_show_teacherOnCourse.html.erb
@@ -149,9 +149,10 @@
 
 <script>
 
-	$('#raider_content').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=1') ;
-	$('#raider_form').hide();
-	
+	function prepare_raider(){
+		$('#raider_content').load('/courses/course_raider?ct_id=<%=j courseTeacher.id.to_s %>&type=1') ;
+		$('#raider_form').hide();
+	}
 	function loadForm(id, link){
 		if(link.html()=="編輯"){
 			link.html("取消");
