reviews search done

--- a/app/views/courses/_search_js.html.erb
+++ b/app/views/courses/_search_js.html.erb
@@ -31,10 +31,10 @@ function search_keyword(){
 		return false;
 	}
 	var sem_id=$("#semester_id").val();
-	/*if (sem_id==""){
+	if (sem_id==""){
 		$("#semester_id").prev().focus();
 		return false;
-	}*/
+	}
 	var search_type=$("#search_type").val();
 	var degree_id=$("#degree_id").val();
 	var dept_id=$("#department_id").val();
