--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,11 +1,25 @@
 <script>
-$(document).ready(function($) {
-	<% if params[:page] %>
-		$("#search_result").load("/reviews/list_all_reviews?page=<%=params[:page]%>");
-	<% else %>
-		$("#search_result").load("/reviews/list_all_reviews?page=1");
-	<% end %>
-});
+	$(document).ready(function() {
+		$("#search_result").load("/reviews/list_all_reviews?page=<%=@page%>");
+	});
+	function search_keyword(){
+		var search_term=$("#search_term").val();
+		if(search_term==""){
+			$("#search_term").focus();
+			return false;
+		}
+		var search_type=$("#search_type").val();
+		$("#search_result").load("/reviews/search_by_keyword",
+			{	search_term: search_term,
+				search_type: search_type,
+				page: <%=@page%>
+			}
+		);
+	}
+	function change_search_type(obj){
+		$("#search_type").val(obj.attr("id"));
+		$("#search_action").html(obj.text()+" <span class='caret'></span>");
+	}
 </script>
 <div class="bs-callout bs-callout-warning well">
 	<h4>為了提供大家更完整的服務，本頁僅保留BS2選課版的心得，
@@ -17,11 +31,11 @@ $(document).ready(function($) {
 		<div class="input-group-btn">
 			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" id="search_action">標題 <span class="caret"></span></button>
 			<ul class="dropdown-menu">
-				<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="review_title">標題</a></li>
-				<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="review_content">內容</a></li>
+				<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="title">標題</a></li>
+				<li><a href="javascript:void(0);" onclick="change_search_type($(this))" id="content">內容</a></li>
 			</ul>
 		</div><!-- /btn-group -->
-		<input type="hidden" id="search_type" value="course_name">
+		<input type="hidden" id="search_type" value="title">
 		<input type="text" class="form-control" id="search_term" placeholder="Search..." >
 		
 		<span class="input-group-btn"><!--type="submit"-->
